<?xml version="1.0" encoding="utf-8" ?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/btnColor">
    <!-- Agregar color  -->
    <!--  Elementos  -->
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">

        <ImageView
            android:layout_width="174dp"
            android:layout_height="131dp"
            android:layout_gravity="center"
            android:layout_marginTop="44dp"
            android:src="@drawable/icon_taxi"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="341dp"
            android:layout_height="70dp"
            android:layout_margin="40dp"
            android:fontFamily="@font/roboto_condensed_bold"
            android:text="@string/description"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_margin="20dp"
            android:gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnConductor"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center|center_horizontal"
                android:text="@string/imDelivery"
                android:textColor="@color/white"
                android:textSize="15sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnCliente"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center|center_horizontal"
                android:text="@string/imConsumer"
                android:textColor="@color/white"
                android:textSize="15sp"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>