<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/btnColor"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="412dp"
        android:layout_height="255dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="298dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="33dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxWidth="33dp"
                android:maxHeight="30dp"
                app:srcCompat="@drawable/icon_user"
                android:contentDescription="@string/todo" />

            <EditText
                android:id="@+id/eTxtName"
                android:layout_width="260dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/rounded_button"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/name"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="#FFFFFF"
                android:textSize="23sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="298dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img"
                android:layout_width="33dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:maxWidth="33dp"
                android:maxHeight="30dp"
                app:srcCompat="@drawable/icon_pass"
                android:contentDescription="@string/todo" />

            <EditText
                android:id="@+id/eTxtPass"
                android:layout_width="260dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/rounded_button"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="#FFFFFF"
                android:textSize="23sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="298dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv3"
                android:layout_width="33dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:maxWidth="33dp"
                android:maxHeight="30dp"
                app:srcCompat="@drawable/icon_email"
                android:contentDescription="@string/todo" />

            <EditText
                android:id="@+id/eTxtEmail"
                android:layout_width="260dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/rounded_button"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="text"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:textColor="#FFFFFF"
                android:textSize="23sp" />
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="240dp"
            android:layout_height="0dp"
            android:layout_marginTop="44dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/colorBlue"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>